# solver

./: .codecov.yml  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  codecov.yml
.github/: codecov.yml  constants.env
.github/workflows/: ci.yml  codeql-analysis.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake  Utilities.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt  fuzz_all_sat.cpp
include/solver/: assert.hpp  binary_domain.hpp  binary_literal_type.hpp  cdcl_sat.hpp  cdcl_sat_class.hpp  cdcl_sat_clause_class.hpp  cdcl_sat_clause_impl.hpp  cdcl_sat_conflict_analysis.hpp  cdcl_sat_conflict_analysis_impl.hpp  cdcl_sat_impl.hpp  dimacs_parser.hpp  discrete_domain.hpp  domain_utils.hpp  int_to_bool_vars.hpp  sample_library.hpp  sat_types.hpp  solver_library.hpp  state_saver.hpp  trivial_sat.hpp
src/: CMakeLists.txt
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt
src/solver_exe/: CMakeLists.txt  main.cpp
src/solver_library/: CMakeLists.txt  cdcl_sat.cpp  dimacs_parser.cpp  dimacs_parser.cpp.orig  solver_library.cpp  trivial_sat.cpp
test/: CMakeLists.txt  binary_domain.cpp  constexpr_tests.cpp  fuzz_utils.hpp  test_binary_domain.cpp  test_cdcl_sat.cpp  test_dimacs_parser.cpp  test_discrete_domain.cpp  test_fuzz_utils.cpp  test_int_to_bool.cpp  test_trivial_sat.cpp  test_utils.hpp  tests.cpp
test/inputs/: simple_unsat.dimacs  trivial.dimacs
